hybrid_a_star初步完成，计算H和G的部分有待改进，搜索会扩展很多无用的节点， 最后生成RS曲线也是会发生碰撞，这个应该需要改进转弯半径

--- a/src/hybrid_a_star/package.xml
+++ b/src/hybrid_a_star/package.xml
@@ -52,6 +52,8 @@
   <build_depend>roscpp</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
+  <build_depend>plan_env</build_depend>
+  <exec_depend>plan_env</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
